# TDT4173_project_g14

./: .gitignore  .gitmodules  CIFAR10.ipynb  README.md
cifar10_model_classification/: .gitignore  README.md  cifar10.py  dataloaders.py  model.py  model_export.py  model_transfer_learning.py  utils.py
cifar10_model_classification/cmsisnn/: analyze.py  build.py  convert.py  evaluate.py  external.py  testing.py
cmsis_nn/: CMakeLists.txt  README.md  cmsis-host.diff
cmsis_nn/example/: CMakeLists.txt  main.c
cmsis_nn/nrf/nn/: CMakeLists.txt  nn_util.h  prj.conf
cmsis_nn/nrf/nn-bt/: CMakeLists.txt  prj.conf
cmsis_nn/nrf/nn-bt/boards/: nrf9160dk_nrf52840.overlay
cmsis_nn/nrf/nn-bt/src/: main.c
cmsis_nn/nrf/nn/boards/: nrf9160dk_nrf9160ns.overlay
cmsis_nn/nrf/nn/src/: main.c
cmsis_nn/scripts/: classify.py
cmsis_nn/util/: nn_util.c  nn_util.h
cmsis_nn_scripts/: CIFAR10-fastai2-cmsis-nn.ipynb  convert_model.py  export_activations.py  shared_model.py
